-fixed and added menu button to dark mode - index.hmtl article done(for now)

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -11,7 +11,7 @@ body {
     grid-template-columns: auto;
     grid-template-rows: 10vh 1fr 5vh;
     grid-template-areas:
-        'header header header'
+        'header header nav'
         'main main main'
         'footer footer footer'
     ;
@@ -45,8 +45,67 @@ header {
         'opsz' 48
 }
 
-
 nav {
+    grid-area: nav;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    background-color: var(--back-color);
+    top: 0;
+    transition: background-color 1s;
+}
+
+.menu {
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    color: #777;
+    cursor: pointer;
+    text-align: center;
+    padding: 10px 10px;
+    border-radius: 12px;
+
+}
+
+nav.active>.menu,
+.menu:hover {
+    color: black;
+}
+
+.dropdown-menu {
+    position: absolute;
+    left: 0;
+    top: calc(100% + .25rem);
+    background-color: var(--back-color);
+    padding: .75rem;
+    border-radius: .25rem;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10px);
+    transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+}
+
+nav.active>.menu+.dropdown-menu {
+    opacity: 1;
+    transform: translateY(0);
+    pointer-events: auto;
+}
+
+.information-grid {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    gap: 2rem;
+}
+
+.dropdown-links {
+    display: flex;
+    flex-direction: column;
+    gap: .25rem;
+}
+
+/* nav {
     grid-area: nav;
     text-decoration: none;
     display: flex;
@@ -54,7 +113,7 @@ nav {
     padding-top: 20px;
     padding-bottom: 20px;
     padding-right: 125px;
-}
+} */
 
 main {
     grid-area: main;
@@ -64,7 +123,20 @@ main {
     transition: background-color 1s, color 1s;
 }
 
+.calculator-title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 
+.calculator{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 50px;
+
+}
 
 div.image-with-centered-text {
     margin: 30px;
@@ -75,6 +147,7 @@ div.image-with-centered-text {
 .image-with-centered-text {
     background-image: url(images/david-marcu.jpg);
     min-height: 500px;
+    width: auto;
     /* background-attachment: fixed; */
     background-position: center;
     background-repeat: no-repeat;
@@ -94,6 +167,13 @@ div.image-with-centered-text {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.phrase-and-image{
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 footer {
